--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -52,6 +52,7 @@
                 </small>
             </div>
             <script src="@routes.Assets.at("javascripts/datepicker/datepicker.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/createlecturecheckbox.js")" type="text/javascript"></script>
         </div>
 
 
