--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -118,15 +118,17 @@
             <div class="panel-heading">@Messages("lecture.home.homeworks")
             </div>
             <div class="panel-body">
-              @Messages("lecture.home.homework.remote")
+              <div class="textfont">@Messages("lecture.home.homework.remote")</div>
+              <br>
+              @if(lecture.attendent.contains(semesteruser)){
               @if(Repo.findRepoByLectureAndOwner(lecture.semester,semesteruser,lecture)!=null&&semesteruser.roles.equals(UserRoll.Students.toString)){
                 @Messages("lecture.home.homework.remote.exist")@Repo.findRepoByLectureAndOwner(lecture.semester,semesteruser,lecture).repopath
               }else{
-                @Messages("lecture.home.homework.remote.noexist")<form action="#someaction" method="post"><button class="btn btn-success" type="submit">@Messages("lecture.remote.generate")</button></form>
+                <form action="#someaction" method="post">@Messages("lecture.home.homework.remote.noexist") <button class="btn btn-success pull-right" type="submit">@Messages("lecture.remote.generate")</button></form>
               }
 
-              <br>
-              @if(lecture.attendent.contains(semesteruser)){
+
+
                 <table class="table table-striped custab">
                   <thead>
                     <tr>
