fix a problem in getalllecture, also fix the delterepo function, the remote repo can be correcty delte, next should give lecture admin repo management function(add self to the students repo)

--- a/app/views/lectures/index.scala.html
+++ b/app/views/lectures/index.scala.html
@@ -20,7 +20,7 @@
         </div>
         <div id="@key" class="panel-collapse collapse" role="tabpanel" aria-labelledby="a@key">
           <div class="list-group">
-          @if(value != null && !value.isEmpty){
+          @if(value != null && value.nonEmpty){
             @for(lecture <- value) {
 
                 @if(user.roles.toString.equals("Teachers") || user.roles.toString.equals("Assistants")) {
