admin of the gitolite should also be granted a access right to the user repo

--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -143,7 +143,7 @@
                       <td>@currentassignment.numberofexercise</td>
                       <td>@currentassignment.addtionalinfo</td>
 
-                      <td>last commit</td>
+                      <td>@controllers.lectures.user.Lecturehome.lastUpdateStatus(semesteruser,lecture)</td>
                       <td>@currentassignment.deadline</td>
                     </tr>
 
