after add assignements semesteruser should update

--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -133,7 +133,7 @@
             </button>
           </div>
           <div class="panel-body">
-          @Messages("lecture.home.homework.remote")
+          @Messages("lecture.home.homework.remote.admin")
           </div>
           <table class="table table-striped custab">
             <thead>
