--- a/app/views/account/settings/index.scala.html
+++ b/app/views/account/settings/index.scala.html
@@ -77,7 +77,7 @@
                      </div>
                        <div class="form-group">
                            <label>@Messages("ssh.addkey")</label>
-                           <textarea class="form-control" wrap="soft" rows="5" name="ssh" placeholder="@Messages("ssh.copyssh")"></textarea>
+                           <textarea class="form-control" onchange="this.value=this.value.replace(/[\n\r](?!\w)/gi,'');" rows="5" name="ssh" placeholder="@Messages("ssh.copyssh")"></textarea>
                        </div>
                        <button type="submit" class="btn btn-primary" >@Messages("ssh.add")</button>
                    </form>
