fix the small issue in gui

--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -118,7 +118,7 @@
                 </thead>
                 <tr>
                   <td>@Assignment.getValidHandinOfStudentsinLecture(lecture.semester,lecture,semesteruser).size()/@lecture.requriednumberofvalidassignment</td>
-                  <td>@Assignment.getOptionalAssignmentofStudentsinLecture(lecture.semester,lecture,semesteruser)/@lecture.optionalassignments</td>
+                  <td>@Assignment.getOptionalAssignmentofStudentsinLecture(lecture.semester,lecture,semesteruser).size()/@lecture.optionalassignments</td>
                   <td>@lecture.performance</td>
                 </tr>
               </table>
