--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -61,7 +61,7 @@
                     <td>@currentassignment.addtionalinfo</td>
                     <td  class="text-center">
                     @if(currentassignment.isExpired){<a data-toggle="modal" data-target="#@currentassignment.id" title="@Messages("Assignment.handin")"><i class="fa fa-pencil-square-o"></i></a>
-                      <a title="delete" href="#change the hand in controller"><i class="fa fa-times"></i></a>}
+                      <a title="revert last upload" href="@controllers.lectures.user.routes.Lecturehome.reverthandinhomework(currentassignment.id,semesteruser.lastname,lecture.semester,lecture.courseName)"><i class="fa fa-times"></i></a>}
                     </td>
                     <td>@controllers.lectures.user.Lecturehome.lastUpdateStatus(semesteruser,lecture)</td>
                     <td><a data-toggle="modal" data-target="#eval@currentassignment.id" title="@Messages("click.for.detail")">@currentassignment.gettotalearndpoint()/@currentassignment.totalpoints</a></td>
@@ -111,9 +111,9 @@
               <table class="table table-striped custab">
                 <thead>
                   <tr>
-                    <td>@Messages("assginment.validhandin.sum")</td>
-                    <td>@Messages("assginment.optional.sum")</td>
-                    <td>@Messages("totalperformance")</td>
+                    <th>@Messages("assginment.validhandin.sum")</th>
+                    <th>@Messages("assginment.optional.sum")</th>
+                    <th>@Messages("totalperformance")</th>
                   </tr>
                 </thead>
                 <tr>
